Update to /coords command