@@ -3,9 +3,6 @@ package it.pixel.serverhandbook.service.activity;
 import org.bukkit.entity.Player;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * The type Logging service.
@@ -19,13 +16,7 @@ public class ActivityCommand extends ActivityUtils {
      * @throws IOException the io exception
      */
     public static void show(Player player) throws IOException, ClassNotFoundException {
-
-        List<String> messages = new ArrayList<>();
-        messages.add(" ");
-        messages.addAll(getAllActivities().stream().map(ActivityUtils::prepareActivityString).collect(Collectors.toList()));
-        messages.add(" ");
-        messages.forEach(player::sendMessage);
-
+        sendMessage(player, getAllActivities().stream().map(ActivityUtils::prepareActivityString).toList());
     }
 
 }
