@@ -2,18 +2,15 @@ package it.pixel.serverhandbook.service.coords;
 
 import it.pixel.serverhandbook.model.Coordinate;
 import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
-import org.bukkit.Location;
 import org.bukkit.entity.Player;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import static it.pixel.serverhandbook.model.Coordinate.createVectorFromLocation;
 import static it.pixel.serverhandbook.service.FileManager.writeLine;
-import static it.pixel.serverhandbook.service.TextManager.customText;
 import static it.pixel.serverhandbook.service.TextManager.textInfo;
+import static it.pixel.serverhandbook.service.TextManager.textName;
 
 /**
  * The type Coords service.
@@ -31,10 +28,11 @@ public class CoordsCommand extends CoordsUtils {
         if (arguments.length <= 1)
             return;
 
-        String description = getParameters(arguments).stream().map(String::trim).collect(Collectors.joining(" "));
-        Location coords = player.getLocation();
+        String description = String.join(" ", getParameters(arguments));
 
-        writeLine(COORDS_FILE, new Coordinate(player.getName(), coords.getBlockX(), coords.getBlockY(), coords.getBlockZ(), description));
+        writeLine(COORDS_FILE, new Coordinate(false, player.getName(), getDimensionFormEnvironment(player.getWorld().getEnvironment()), createVectorFromLocation(player.getLocation()), description));
+
+        sendMessage(player, textInfo("Coordinate salvate con successo"));
     }
 
 
@@ -47,7 +45,13 @@ public class CoordsCommand extends CoordsUtils {
     public static void show(Player player) throws IOException, ClassNotFoundException {
         List<Coordinate> coords = findAllCoordsByPlayer(player);
 
-        coords.forEach(c -> player.sendMessage(prepareCoordinateString(c)));
+        if (coords.isEmpty()) {
+            sendMessage(player, textInfo("Non hai ancora coordinate salvate. Usa /coords add <descrizione> per aggiungerne una."));
+            return;
+        }
+
+        String message = textInfo("Le tue coordinate");
+        sendMessage(player, message, coords.stream().map(CoordsUtils::prepareCoordinateString).toList());
     }
 
 
@@ -59,37 +63,43 @@ public class CoordsCommand extends CoordsUtils {
      * @throws IOException the io exception
      */
     public static void search(String[] arguments, Player player) throws IOException, ClassNotFoundException {
-        String searchKey = getParameters(arguments).stream().map(String::trim).collect(Collectors.joining(" "));
-        findAllCoordsByPlayerAndDescription(player, searchKey)
-                .forEach(c -> player.sendMessage(prepareCoordinateString(c)));
+        String searchKey = String.join(" ", getParameters(arguments));
+
+        List<Coordinate> coords = findAllCoordsByPlayerAndDescription(player, searchKey);
+
+        if (coords.isEmpty()) {
+            sendMessage(player, textInfo("Nessun risultato ottenuto."));
+            return;
+        }
+
+        sendMessage(player, textInfo("Le tue coordinate che contengono '" + searchKey + "'"), coords.stream().map(CoordsUtils::prepareCoordinateString).toList());
     }
+
 
     /**
      * Show to.
      *
      * @param arguments the arguments
      * @param player    the player
+     * @throws IOException            the io exception
+     * @throws ClassNotFoundException the class not found exception
      */
     public static void showTo(String[] arguments, Player player) throws IOException, ClassNotFoundException {
         List<String> parameters = getParameters(arguments);
         Player target = Bukkit.getPlayer(parameters.remove(0));
 
-        if (target == null) return;
 
-        String searchKey = parameters.stream().map(String::trim).collect(Collectors.joining(" "));
-
-        String message = customText(customText(player.getName(), ChatColor.DARK_PURPLE) + textInfo(" ti ha inviato delle coordinate"), ChatColor.ITALIC);
-
+        String searchKey = String.join(" ", parameters);
         List<String> coordList = findAllCoordsByPlayerAndDescription(player, searchKey)
                 .stream()
                 .map(CoordsUtils::prepareCoordinateString)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<String> messages = new ArrayList<>();
-        messages.add(" ");
-        messages.add(message);
-        messages.addAll(coordList);
-        messages.add(customText(" "));
-        messages.forEach(target::sendMessage);
+        if (target == null || coordList.isEmpty()) return;
+
+        String message = textName(player.getName()) + textInfo(" ti ha inviato delle coordinate");
+
+        sendMessage(player, textInfo("Hai condiviso con ") + textName(target.getName()) + textInfo(" delle coordinate"), coordList);
+        sendMessage(target, message, coordList);
     }
 }
